--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ oauthlib==3.2.2
 pycparser==2.22
 PyJWT==2.8.0
 python3-openid==3.2.0
+pytz==2024.1
 requests==2.31.0
 requests-oauthlib==2.0.0
 sqlparse==0.5.0
