--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ ipython==8.18.1
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.3
+joblib==1.4.2
 json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.21.1
@@ -100,6 +101,8 @@ requests-oauthlib==2.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.17.1
+scikit-learn==1.5.0
+scipy==1.13.1
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
@@ -107,6 +110,7 @@ soupsieve==2.5
 sqlparse==0.5.0
 stack-data==0.6.3
 terminado==0.18.0
+threadpoolctl==3.5.0
 tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.4
